@@ -3,10 +3,10 @@ version = 1.318
 author  = Dominique Dumont
 license = LGPL_2_1
 copyright_holder = Dominique Dumont
-copyright_year = 2010
+copyright_year = 2011
 
 [Prereqs / RuntimeRequires]
-Config::Model    = 1.212
+Config::Model    = 1.227
 Exception::Class = 0
 File::Slurp      = 0
 Tk               = 0
