@@ -364,24 +364,6 @@ sub remove_selection {
     $tklist->insert( end => @insert ) ;
 }
 
-sub store {
-    my $cw = shift ;
-
-    eval {$cw->{list}->set_checked_list_as_list(%{$cw->{check_list}}); } ;
-
-    if ($@) {
-	$cw -> Dialog ( -title => 'Value error',
-			-text  => $@->as_string,
-		      )
-            -> Show ;
-	$cw->reset_value ;
-    }
-    else {
-	# trigger redraw of Tk Tree
-	$cw->reload_tree ;
-    }
-}
-
 sub reload_tree {
     my $cw = shift ;
     $cw->{store_cb}->() ;
